add filterable TableView